fix: use improper use of List