@@ -1,11 +1,11 @@
 package org.navistack.framework.ratelimit;
 
-import com.sun.tools.javac.util.List;
 import org.springframework.core.io.Resource;
 import org.springframework.data.redis.core.RedisOperations;
 import org.springframework.data.redis.core.script.RedisScript;
 
 import java.time.temporal.TemporalUnit;
+import java.util.Collections;
 
 public class RedisOperationFixedWindowRateLimiter extends AbstractRedisFixedWindowRateLimiter {
     private final RedisOperations<String, Long> redisOperations;
@@ -19,7 +19,7 @@ public class RedisOperationFixedWindowRateLimiter extends AbstractRedisFixedWind
         long expiration = temporalUnit.getDuration().getSeconds();
         Boolean result = redisOperations.execute(
                 RedisScript.of(scriptResource, Boolean.class),
-                List.of(key),
+                Collections.singletonList(key),
                 Integer.toString(maxRequests),
                 Long.toString(expiration)
         );
